<resources>
    <string name="app_name">秦  菜</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_phone">手机</string>
    <string name="label_password">密码</string>
    <string name="label_confirm_password">确认密码</string>
    <string name="label_go_register">新用户注册</string>
    <string name="label_verification">验证码</string>
    <string name="label_go_login">已有账号？去登录</string>
    <string name="label_register">注册</string>
    <string name="label_login">登录</string>
    <string name="text_tab_vegetable">蔬菜</string>
    <string name="text_tab_order">订单</string>
    <string name="text_tab_find">发现</string>
    <string name="text_tab_mine">我的</string>
    <string name="hint_phone">请输入11位手机号</string>
    <string name="hint_password">请输入6–20位密码</string>
    <!--各个页面的label-->
    <string name="label_vegetable">秦菜</string>
    <string name="label_order">订单</string>
    <string name="label_mine">我的</string>
    <!--mine页面的text-->
    <string name="text_mine_user_name">用户名</string>
    <string name="text_mine_true_name">真实姓名</string>
    <string name="text_mine_sex">性别</string>
    <string name="text_mine_mobile">手机号</string>
    <string name="text_mine_contract">联系商家</string>
    <string name="text_mine_exit">退出登录</string>
    <string name="text_order_item_order_title">订单号</string>

    <string name="label_go_retrive">忘记密码？</string>
    <string name="label_retrive">重置密码</string>
    <string name="label_new_password">新密码</string>
    <string name="label_get_verify">获取验证码</string>
    <string name="toast_exit">再按一次返回键退出</string>
    <string name="text_order_item_create_time">创建时间:</string>
    <string name="text_order_item_evaluate">发表评价</string>
    <string name="text_submit">已提交</string>
    <string name="text_payment">待付款</string>
    <string name="text_pick">待取货</string>
    <string name="text_finish">已完成</string>
    <string name="money">¥</string>
    <string name="toast_logic_error">逻辑不可达</string>
    <string name="text_cancel_order">取消订单</string>
    <string name="text_go_payment">去支付</string>
    <string name="text_title_order_number">订单号</string>
    <string name="text_copy">复制</string>
    <string name="text_title_order_time">下单时间</string>
    <string name="text_title_order_detail">订单信息</string>
    <string name="title_order_detail">订单详情</string>
    <string name="text_order_describe">订单描述:</string>
    <string name="text_phone_num">15028595851</string>
    <string name="text_go_discuss">去评论</string>
    <string name="title_discuss">评价</string>
    <string name="text_title_discuss_product">评价商品</string>
    <string name="text_submit_discuss">提交评价</string>
    <string name="vegetable_evaluation">商品评价</string>
    <string name="txt_order_info">蔬菜清单</string>
    <string name="txt_in_all">合计</string>
    <string name="txt_RMB">¥</string>
    <string name="txt_pay">支付</string>
    <string name="txt_mul">×</string>
    <string name="hint_describe">快来写下您的评价吧</string>
    <string name="toast_please_choose_satisfation">还有未评价的蔬菜</string>
    <string name="title_order_all">全部</string>
    <string name="title_order_pay">待付款</string>
    <string name="title_order_distribute">待配送</string>
    <string name="title_order_pick">待取货</string>
    <string name="title_order_finish">已完成</string>
    <string name="text_to_pay">去付款</string>
    <string name="text_to_pick">去取货</string>
    <string name="vegetable_sales">| 月售</string>
    <string name="vegetable_kind">份</string>
    <string name="toast_avatar_load_error">图像加载失败</string>
    <string name="toast_change_success">修改成功</string>
    <string name="toast_copy_success">复制成功</string>
    <string name="toast_copy_error">复制失败</string>
    <string name="text_mine_credit">信誉积分</string>
    <string name="make_sure">确定</string>
    <string name="shopping_remark">请写下备注内容(可不填)</string>
    <string name="title_remark">订单备注</string>
    <string name="text_click_to_unlock">点击开锁</string>
    <string name="text_click_to_lock">开锁中</string>
    <string name="remark">备注</string>
    <string name="text_mine_user_avatar">头像</string>
    <string name="shopping_empty">购物车空空如已~~</string>
    <string name="firm_pay_msg">支付信息</string>
    <string name="firm_location_msg">收货信息</string>
    <string name="txt_firm_price">应付金额</string>
    <string name="wechat">微信支付</string>
    <string name="alipay">支付宝</string>
    <string name="empty">空空如也~~</string>
    <string name="text_wallet">钱包</string>
    <string name="text_wallet_order_type">类型:</string>
    <string name="text_wallet_order_create_time">创建时间:</string>
    <string name="text_wallet_order_id">订单号:</string>
    <string name="text_wallet_order_updata_time">最近更新:</string>
    <string name="text_wallet_order_state_finished">已完成</string>
    <string name="text_wallet_order_state_unfinished">未完成</string>
    <string name="text_wallet_order_type_shopping">购物</string>
    <string name="text_wallet_order_type_recharge">现金充值</string>
    <string name="text_wallet_order_type_withdraw">提现</string>
    <string name="text_wallet_order_type_refunds">退货</string>
    <string name="text_wallet_order_type_gift_recharge">礼品卡充值</string>
</resources>
