<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="io.github.vzer.sharevegetable.account.LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_64"
        android:background="@drawable/bg_toolbar" >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_account_shade"
            android:layout_gravity="bottom"
            />
        <View
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/len_72"
        android:layout_marginRight="@dimen/len_72"
        android:layout_marginTop="@dimen/len_16"
        android:orientation="vertical"
        android:paddingBottom="@dimen/len_8"
        android:paddingTop="@dimen/len_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">

            <ImageView
                style="@style/imge_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_phone" />

            <io.github.vzer.common.widget.ClearEditText
                android:id="@+id/edit_account_phone"
                style="@style/edit_account"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <View style="@style/view_div_gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_4"
            android:padding="@dimen/len_4">

            <ImageView
                style="@style/imge_account"
                android:src="@drawable/ic_account_verify" />

            <EditText
                android:id="@+id/edit_account_verify"
                style="@style/edit_account"
                android:hint="@string/label_verification"
                android:inputType="number"
                android:maxLength="4" />

            <Button
                android:id="@+id/btn_account_get_verify"
                style="@style/btn_verify"
                android:text="@string/label_get_verify" />

        </FrameLayout>

        <View style="@style/view_div_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_4"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">

            <ImageView
                style="@style/imge_account"
                android:src="@drawable/ic_account_password" />

            <io.github.vzer.common.widget.ClearEditText
                android:id="@+id/edit_account_password"
                style="@style/edit_account"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </LinearLayout>

        <View style="@style/view_div_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_4"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">

            <ImageView
                style="@style/imge_account"
                android:src="@drawable/ic_account_password" />

            <io.github.vzer.common.widget.ClearEditText
                android:id="@+id/edit_account_confirm_password"
                style="@style/edit_account"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </LinearLayout>

        <View style="@style/view_div_gray" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="@dimen/len_64"
        android:layout_height="@dimen/len_64"
        android:layout_gravity="center_horizontal"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_account_submit"
        android:layout_width="@dimen/edit_account_width"
        android:layout_height="@dimen/len_40"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/len_40"
        android:background="@drawable/bg_btn_account_selector"
        android:enabled="false"
        android:text="@string/label_retrive"
        android:textColor="@color/def_btn_text_selector" />


</LinearLayout>