<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="io.github.vzer.sharevegetable.account.LoginFragment">



    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="@dimen/len_64"
        android:layout_height="@dimen/len_64"
        android:layout_gravity="center_horizontal"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/len_72"
        android:layout_marginRight="@dimen/len_72"
        android:layout_marginTop="@dimen/len_24"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/len_8"
        android:paddingTop="@dimen/len_8">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">

            <ImageView
                style="@style/imge_account"
                android:src="@drawable/ic_account_phone" />

            <io.github.vzer.common.widget.ClearEditText
                android:id="@+id/edit_account_phone"
                style="@style/edit_account"
                android:maxLength="11"
                android:hint="@string/hint_phone"
                android:inputType="phone" />
        </LinearLayout>

        <View style="@style/view_div_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_16"
            android:orientation="horizontal"
            android:padding="@dimen/len_4">
            <ImageView
                android:id="@+id/imageView"
                style="@style/imge_account"
                android:src="@drawable/ic_account_password" />

            <io.github.vzer.common.widget.ClearEditText
                android:id="@+id/edit_account_password"
                style="@style/edit_account"
                android:maxLength="20"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <View style="@style/view_div_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_go_retrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_12"
                android:textColor="@color/btn_txt_disable"
                android:layout_gravity="start"
                android:text="@string/label_go_retrive"
                android:padding="@dimen/len_8"
                tools:ignore="RtlHardcoded" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_go_register"
                style="@style/txt_account"
                android:gravity="end"
                android:text="@string/label_go_register"
                tools:ignore=",RtlHardcoded,RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_account_submit"
        android:layout_width="@dimen/edit_account_width"
        android:layout_height="@dimen/len_40"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/len_40"
        android:background="@drawable/bg_btn_account_selector"
        android:enabled="false"
        android:text="@string/label_login"
        android:textColor="@color/def_btn_text_selector" />

</LinearLayout>
