<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_submit"
            android:layout_width="@dimen/len_24"
            android:layout_centerHorizontal="true"
            android:layout_height="@dimen/len_24"
            android:background="@drawable/ic_submit_selected"/>
        <TextView
            android:id="@+id/txt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_submit"
            android:text="@string/text_submit"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/img_point_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_dot_selected"
        android:layout_marginTop="@dimen/len_8"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_payment"
            android:layout_width="@dimen/len_24"
            android:layout_height="@dimen/len_24"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_pay_selected"/>
        <TextView
            android:id="@+id/txt_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_payment"
            android:text="@string/text_payment"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/img_point_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/len_8"
        android:background="@drawable/ic_dot_selected"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_pick"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_pick_selected"
            android:layout_width="@dimen/len_24"
            android:layout_height="@dimen/len_24"/>
        <TextView
            android:id="@+id/txt_pick"
            android:layout_below="@id/img_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pick"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/img_point_finish"
        android:layout_width="wrap_content"
        android:background="@drawable/ic_dot_selected"
        android:layout_marginTop="@dimen/len_8"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_finish"
            android:background="@drawable/ic_finish_selected"
            android:layout_width="@dimen/len_24"
            android:layout_centerHorizontal="true"
            android:layout_height="@dimen/len_24"/>
        <TextView
            android:id="@+id/txt_finish"
            android:layout_below="@id/img_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_finish"/>
    </RelativeLayout>
</LinearLayout>