<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_order_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/txt_payment_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/len_16"
                android:gravity="center"
                android:text="等待配送>"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"/>

            <RelativeLayout
                android:layout_marginTop="@dimen/len_16"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_payment_state"
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_alignParentLeft="true"
                    android:id="@+id/btn_order_cancel"
                    android:layout_width="74dp"
                    android:layout_height="@dimen/len_32"
                    android:background="@drawable/bg_btn_yellow"
                    android:textColor="@color/white"
                    android:text="@string/text_cancel_order"/>

                <Button
                    android:layout_alignParentRight="true"
                    android:id="@+id/btn_to_pay"
                    android:layout_width="74dp"
                    android:text="@string/text_to_pay"
                    android:layout_height="@dimen/len_32"
                    android:background="@drawable/bg_btn_yellow"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/txt_order_state_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_payment_state"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/len_16"
                android:text="订单将配送至xxxxxxxxxxxx"
                android:textColor="@color/text_secondary"/>

            <Button
                android:id="@+id/btn_to_discuss"
                android:layout_width="74dp"
                android:layout_height="@dimen/len_32"
                android:layout_below="@id/txt_payment_state"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/len_16"
                android:background="@drawable/bg_btn_yellow"
                android:text="@string/text_go_discuss"
                android:textColor="@color/white"
                android:visibility="gone"/>
        </RelativeLayout>

        <io.github.vzer.sharevegetable.widget.NoTouchRecyclerView
            android:id="@+id/rec_order_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_8"
            android:background="@color/white">
        </io.github.vzer.sharevegetable.widget.NoTouchRecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/txt_contract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/len_20"
                android:text="联系商家"
                android:textColor="@color/text_yellow"/>

            <TextView
                android:id="@+id/txt_gong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/txt_order_money"
                android:text="共"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"/>

            <TextView
                android:id="@+id/txt_order_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/len_20"
                android:text="$42"
                android:textColor="@color/text_money"
                android:textSize="@dimen/font_18"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_14"
            android:background="@color/white"
            android:paddingBottom="@dimen/len_24"
            android:paddingLeft="@dimen/len_20"
            android:paddingRight="@dimen/len_20"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_order_detail"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_title_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_marginTop="@dimen/len_24"
                android:text="@string/text_title_order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"/>

            <TextView
                android:id="@+id/txt_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txt_title_order_number"
                android:layout_marginRight="@dimen/len_12"
                android:layout_toLeftOf="@id/txt_copy"
                android:text="12312317892631"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"/>

            <TextView
                android:id="@+id/txt_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txt_title_order_number"
                android:layout_alignParentRight="true"
                android:text="@string/text_copy"
                android:textColor="@color/text_yellow"
                android:textSize="@dimen/font_12"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_title_order_number"
                android:layout_marginTop="@dimen/font_10"
                android:background="@color/div_color"/>

            <TextView
                android:id="@+id/txt_title_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title_order_number"
                android:layout_marginTop="@dimen/len_24"
                android:text="@string/text_title_order_time"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"/>

            <TextView
                android:id="@+id/txt_order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txt_title_order_time"
                android:layout_alignParentRight="true"
                android:text="2017-07-25 22:15"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_title_order_time"
                android:layout_marginTop="@dimen/font_10"
                android:background="@color/div_color"/>

            <TextView
                android:id="@+id/txt_title_order_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title_order_time"
                android:layout_marginTop="@dimen/len_24"
                android:text="@string/text_order_describe"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"/>

            <TextView
                android:id="@+id/txt_order_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title_order_describe"
                android:text="12123123123"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
